# Android

./: .gitignore  CMakeLists.txt  README.md  test_server.cpp
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/Movable/: Human.kt  Main.kt  Movable.kt  nasled.kt
app/src/main/java/com/example/android/: CalculatorActivity.kt  MainActivity.kt
app/src/main/res/layout/: activity_calculator.xml  activity_main.xml  activity_main_hub.xml
gradle/wrapper/: gradle-wrapper.properties
scr/: Human.kt  Main.kt  Movable.kt  nasled.kt
src/: Constants.h  Database.cpp  Database.h  GuiManager.cpp  GuiManager.h  Heatmap.cpp  Heatmap.h  Mercator.cpp  Mercator.h  NetworkServer.cpp  NetworkServer.h  SessionRenderer.cpp  SessionRenderer.h  TelemetryParser.cpp  TelemetryParser.h  TelemetryTypes.h  TileManager.cpp  TileManager.h  main.cpp
